--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jobtests</title>
+  <title><%= yield :title %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render 'shared/header' %>
 
-<%= yield %>
+  <div class="container">
 
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="page-header">
+          <h1><%= yield :title %></h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <%= yield %>
+    </div>
+  </div>
+
+  <%= render 'shared/footer' %>
 </body>
 </html>
