fix: image size responsive now

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,7 +27,7 @@
         </ul>
       </div>
 
-      <%= image_tag 'img1-870x400.jpeg' %>
+      <%= image_tag 'img1-870x400.jpeg', class: 'img-responsive' %>
 
       <p><%= truncate post.description %></p>
 
