--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,9 +31,9 @@
 
       <p><%= truncate post.description %></p>
 
-      <%= link_to t('.read_more'), post_path(post), class: 'btn btn-primary' %>
-      <%= link_to t('.edit'), edit_post_path(post) %>
-      <%= link_to t('.delete'), post, method: :delete, data: { confirm: t('.delete_confirm') } %>
+      <%= link_to t('.read_more'), post_path(post), class: 'btn btn-default btn-sm' %>
+      <%= link_to t('.edit'), edit_post_path(post), class: 'btn btn-primary btn-sm' %>
+      <%= link_to t('.delete'), post, method: :delete, data: { confirm: t('.delete_confirm') }, class: 'btn btn-danger btn-sm' %>
 
     </div>
   <% end %>
