--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,10 +3,10 @@
 <div class="col-lg-8">
   <%= link_to t('.add'), new_post_path, class: 'btn btn-success' %>
 
-  <% posts.each do |post| %>
+  <% posts.newests.each do |post| %>
 
     <div class="blog-post">
-      <h2><%= post.title %></h2>
+      <h2><%= link_to post.title, post_path(post, format: :html) %></h2>
 
       <div class="postmetadata">
         <ul>
@@ -32,8 +32,7 @@
       <p><%= truncate post.description %></p>
 
       <%= link_to t('.read_more'), post_path(post), class: 'btn btn-default btn-sm' %>
-      <%= link_to t('.edit'), edit_post_path(post), class: 'btn btn-primary btn-sm' %>
-      <%= link_to t('.delete'), post, method: :delete, data: { confirm: t('.delete_confirm') }, class: 'btn btn-danger btn-sm' %>
+      <%= render 'controls', post: post %>
 
     </div>
   <% end %>
