devise + omniauth github authentication

--- a/app/views/shared/_current_user.html.erb
+++ b/app/views/shared/_current_user.html.erb
@@ -1,5 +1,6 @@
 <% if user_signed_in? %>
-  <li><%= current_user.full_name %></li>
+  <li><%= link_to current_user.full_name %></li>
+  <li><%= link_to t('.sign_out'), destroy_user_session_path, method: :delete %></li>
 <% else %>
   <li><%= link_to t('.login'), new_user_session_path %></li>
   <li><%= link_to t('.register'), new_user_registration_path %></li>
