connect post with author

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
     <div class="postmetadata">
       <ul>
         <li>
-          <i class="icon-user"></i> <a href="#">Author Name</a>
+          <i class="icon-user"></i> <%= link_to post.author_full_name %>
         </li>
 
         <li>
