--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
       <div class="postmetadata">
         <ul>
           <li>
-            <i class="icon-user"></i> <a href="#">Author Name</a>
+            <i class="icon-user"></i> <%= link_to post.author_full_name %>
           </li>
 
           <li>
