--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
     </div>
 
 
-    <%= image_tag 'img1-870x400.jpeg', class: 'img-responsive' %>
+    <%= image_tag post.image.url(:medium), class: 'img-responsive' %>
 
     <%= simple_format post.description %>
 
