--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
       <h4><%= t('.sign_up', :default => "Sign up") %></h4>
     </div>
     <div class="panel-body">
-      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {role: "form"}) do |f| %>
+      <%= form_for(resource, multipart: true, as: resource_name, url: registration_path(resource_name), html: {role: "form"}) do |f| %>
           <div class="form-group">
             <%= f.label :name %>
             <%= f.text_field :name, autofocus: true, class: "form-control" %>
@@ -21,6 +21,10 @@
           <div class="form-group">
             <%= f.label :password_confirmation %>
             <%= f.password_field :password_confirmation, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :avatar %>
+            <%= f.file_field :avatar, class: "form-control" %>
           </div>
           <%= f.submit t('.sign_up', :default => "Sign up"), class: "btn btn-primary" %>
       <% end %>
