--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,7 @@
-<%= form_for(post) do |f| %>
+<%= form_for(post, multipart: true) do |f| %>
+
   <%= form_errors(post) %>
+
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control' %>
@@ -8,6 +10,10 @@
     <%= f.label :description %>
     <%= f.text_area :description, class: 'form-control', rows: 20 %>
   </div>
+    <div class="form-group">
+      <%= f.label :image %>
+      <%= f.file_field :image, class: 'form-control' %>
+    </div>
   <div class="actions">
     <%= f.submit class: 'btn btn-success' %>
   </div>
