--- a/app/views/shared/_current_user.html.erb
+++ b/app/views/shared/_current_user.html.erb
@@ -1,5 +1,10 @@
 <% if user_signed_in? %>
-  <li><%= link_to current_user.full_name %></li>
+  <li>
+    <%= link_to '#' do %>
+      <%= image_tag current_user.avatar.url(:mini), class: 'avatar-mini', alt: current_user.full_name %>
+      <%= current_user.full_name %>
+    <% end %>
+  </li>
   <li><%= link_to t('.sign_out'), destroy_user_session_path, method: :delete %></li>
 <% else %>
   <li><%= link_to t('.login'), new_user_session_path %></li>
